--- a/package.json
+++ b/package.json
@@ -48,12 +48,7 @@
     "win-fork": "^1.1.1"
   },
   "devDependencies": {
-    "assert-dir-equal": "~1.0.1",
-    "co-mocha": "^1.0.1",
-    "coveralls": "^2.11.6",
-    "istanbul": "^0.4.1",
-    "metalsmith-dev": "^1.0.0",
-    "mocha": "^3.0.2"
+    "metalsmith-dev": "^1.0.0"
   },
   "keywords": [
     "static",
@@ -61,10 +56,9 @@
     "website",
     "blog",
     "generator",
-    "boilerplate",
     "metalsmith",
     "netlify",
-    "netlifyCMS",
+    "datoCMS",
     "riot",
     "riotjs"
   ]
