--- a/src/.eslintrc.yaml
+++ b/src/.eslintrc.yaml
@@ -1,3 +1,5 @@
+# Culture lives by celebrating and sharing it,
+# not by hating other cultures
 ---
   env:
     node: false
@@ -6,7 +8,6 @@
     - html
   globals:
     riot: true
-    PrismicDom: true
     XMLHttpRequest: true
     app: true
   rules:
