update app style to current metlify state
single page app; UI improvements; fixes

--- a/src/.eslintrc.yaml
+++ b/src/.eslintrc.yaml
@@ -1,5 +1,3 @@
-# Culture lives by celebrating and sharing it,
-# not by hating other cultures
 ---
   env:
     node: false
@@ -8,6 +6,7 @@
     - html
   globals:
     riot: true
+    route: true
     XMLHttpRequest: true
     app: true
   rules:
