--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Metalify-Riot-Starter",
   "repository": "git@github.com:gitbreaker222/metalify-riot-starter.git",
   "homepage": "https://github.com/gitbreaker222/metalify-riot-starter",
-  "description": "Website generator with Metalsmith and Riot JS",
+  "description": "Website generator with Metalsmith, Netlify, Elemeno CMS and Riot JS",
   "bin": {
     "metalsmith": "bin/metalsmith",
     "_metalsmith": "bin/_metalsmith"
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "absolute": "0.0.1",
+    "autoprefixer": "^7.1.4",
     "babel-eslint": "~7.2.3",
     "chalk": "^1.1.3",
     "clone": "^1.0.2",
@@ -33,14 +34,11 @@
     "is-utf8": "~0.2.0",
     "metalsmith": "^2.1.0",
     "metalsmith-concat": "^6.0.0",
-    "metalsmith-layouts": "^1.4.1",
-    "metalsmith-markdown": "0.2.1",
-    "metalsmith-move-up": "^1.0.0",
     "metalsmith-sass": "^1.4.0",
-    "pug": "^2.0.0-rc.3",
+    "metalsmith-with-postcss": "^1.1.0",
+    "postcss": "^6.0.11",
     "recursive-readdir": "^2.1.0",
     "rimraf": "^2.2.8",
-    "riot": "^3.6.1",
     "stat-mode": "^0.2.0",
     "thunkify": "^2.1.2",
     "unyield": "0.0.1",
